[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Spolti <fspolti@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
#wheel = "0.44.0"
grpcio = "1.65.5"
h5py = "3.10.0"
tensorflow = "v2.13.1"
# flit = "3.6.0"
docutils = "0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"